chore(it): use maven central tomcat dist for integration tests

--- a/cycle-it/pom.xml
+++ b/cycle-it/pom.xml
@@ -14,6 +14,15 @@
     <signavio.globalpassword>${env.signavio.globalpassword}</signavio.globalpassword>
     <signavio.baseurl>${env.signavio.baseurl}</signavio.baseurl>
 
+    <!-- tomcat -->
+    <version.tomcat>7.0.55</version.tomcat>
+    <tomcat.connector.http.port>48080</tomcat.connector.http.port>
+    <tomcat.connector.http.redirectPort>48443</tomcat.connector.http.redirectPort>
+    <tomcat.connector.ajp.port>48009</tomcat.connector.ajp.port>
+    <tomcat.connector.ajp.redirectPort>48443</tomcat.connector.ajp.redirectPort>
+    <tomcat.server.port>48005</tomcat.server.port>
+    <tomcat.runtime.location>../tomcat-runtime/target/server/apache-tomcat-${version.tomcat}</tomcat.runtime.location>
+
     <cargo.timeout>120000</cargo.timeout>
     <cargo.deploy.timeout>60000</cargo.deploy.timeout>
   </properties>
@@ -157,13 +166,6 @@
       </properties>
       <dependencies>
         <dependency>
-          <!-- make sure it comes after assembly in the build -->
-          <groupId>org.camunda.bpm.qa</groupId>
-          <artifactId>camunda-qa-tomcat-runtime</artifactId>
-          <version>${project.version}</version>
-          <type>pom</type>
-        </dependency>
-        <dependency>
           <groupId>org.camunda.bpm.cycle</groupId>
           <artifactId>camunda-cycle-tomcat</artifactId>
           <version>${project.version}</version>
@@ -196,11 +198,51 @@
             <configuration>
               <!-- Container configuration -->
               <container>
-                <type>installed</type>
                 <containerId>tomcat7x</containerId>
                 <append>false</append>
-                <home>${tomcat.runtime}</home>
+                <!--<home>${tomcat.runtime}</home>-->
                 <timeout>${cargo.timeout}</timeout>
+                <artifactInstaller>
+                  <groupId>org.apache.tomcat</groupId>
+                  <artifactId>tomcat</artifactId>
+                  <version>${version.tomcat}</version>
+                  <type>tar.gz</type>
+                </artifactInstaller>
+                <dependencies>
+                  <dependency>
+                    <groupId>javax.mail</groupId>
+                    <artifactId>mail</artifactId>
+                  </dependency>
+                  <!-- db drivers -->
+                  <dependency>
+                    <groupId>com.h2database</groupId>
+                    <artifactId>h2</artifactId>
+                  </dependency>
+                  <dependency>
+                    <groupId>mysql</groupId>
+                    <artifactId>mysql-connector-java</artifactId>
+                  </dependency>
+                  <dependency>
+                    <groupId>com.oracle.jdbc</groupId>
+                    <artifactId>ojdbc6</artifactId>
+                  </dependency>
+                  <dependency>
+                    <groupId>com.oracle.jdbc</groupId>
+                    <artifactId>ojdbc14</artifactId>
+                  </dependency>
+                  <dependency>
+                    <groupId>com.ibm.db2.jcc</groupId>
+                    <artifactId>db2jcc4</artifactId>
+                  </dependency>
+                  <dependency>
+                    <groupId>com.microsoft.sqlserver</groupId>
+                    <artifactId>sqljdbc4</artifactId>
+                  </dependency>
+                  <dependency>
+                    <groupId>org.postgresql</groupId>
+                    <artifactId>postgresql</artifactId>
+                  </dependency>
+                </dependencies>
               </container>
               <configuration>
                 <type>standalone</type>
@@ -252,31 +294,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
-          </plugin>
-          <plugin>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <version>1.4</version>
-            <executions>
-              <execution>
-                <id>database-test-config</id>
-                <phase>process-test-classes</phase>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-                <configuration>
-                  <target>
-                    <copy file="${basedir}/src/test/resources/camunda.cfg.xml" tofile="target/test-classes/camunda.cfg.xml" overwrite="true">
-                      <filterset>
-                        <filter token="@database.url@" value="${database.url}" />
-                        <filter token="@database.driver@" value="${database.driver}" />
-                        <filter token="@database.user@" value="${database.user}" />
-                        <filter token="@database.password@" value="${database.password}" />
-                      </filterset>
-                    </copy>
-                  </target>
-                </configuration>
-              </execution>
-            </executions>
           </plugin>
         </plugins>
       </build>
@@ -397,6 +414,265 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+
+    <profile>
+      <id>db2</id>
+      <properties>
+        <database.type>db2</database.type>
+        <glassfish.transactions.noxa>true</glassfish.transactions.noxa>
+        <jboss.datasource.filename>db2-ds.xml</jboss.datasource.filename>
+        <database.host>${env.db2.database.host}</database.host>
+        <database.name>${env.db2.database.name}</database.name>
+        <database.user>${env.db2.database.user}</database.user>
+        <database.password>${env.db2.database.password}</database.password>
+        <database.driver>com.ibm.db2.jcc.DB2Driver</database.driver>
+        <database.datasource.class>com.ibm.db2.jcc.DB2SimpleDataSource</database.datasource.class>
+        <database.port>${env.db2.database.port}</database.port>
+        <database.url>jdbc:db2://${database.host}:${database.port}/${database.name}</database.url>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>db2-xa</id>
+      <properties>
+        <database.type>db2</database.type>
+        <glassfish.transactions.noxa>false</glassfish.transactions.noxa>
+        <jboss.datasource.filename>db2-xa-ds.xml</jboss.datasource.filename>
+        <database.host>${env.db2.database.host}</database.host>
+        <database.name>${env.db2.database.name}</database.name>
+        <database.user>${env.db2.database.user}</database.user>
+        <database.password>${env.db2.database.password}</database.password>
+        <database.driver>com.ibm.db2.jcc.DB2Driver</database.driver>
+        <database.datasource.class>com.ibm.db2.jcc.DB2XADataSource</database.datasource.class>
+        <database.datasource.class.type>${database.datasource.class.type.xa}</database.datasource.class.type>
+        <database.port>${env.db2.database.port}</database.port>
+        <database.url>jdbc:db2://${database.host}:${database.port}/${database.name}</database.url>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>h2</id>
+      <properties>
+        <database.type>h2</database.type>
+        <jboss.datasource.filename>h2-ds.xml</jboss.datasource.filename>
+        <database.user>sa</database.user>
+        <database.password>sa</database.password>
+        <database.driver>org.h2.Driver</database.driver>
+        <database.datasource.class>org.h2.jdbcx.JdbcDataSource</database.datasource.class>
+        <!-- This url has to consistent for the subprojects: {server}-runtime and webapp-integration-tests -->
+        <database.url>jdbc:h2:${project.parent.basedir}/target/h2/process-engine;MVCC=TRUE;AUTO_SERVER=TRUE;AUTO_SERVER_PORT=${h2.server.port}</database.url>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>mssql</id>
+      <properties>
+        <database.type>mssql</database.type>
+        <glassfish.transactions.noxa>true</glassfish.transactions.noxa>
+        <jboss.datasource.filename>mssql-ds.xml</jboss.datasource.filename>
+        <database.host>${env.mssql.database.host}</database.host>
+        <database.name>${env.mssql.database.name}</database.name>
+        <database.user>${env.mssql.database.user}</database.user>
+        <database.password>${env.mssql.database.password}</database.password>
+        <database.driver>com.microsoft.sqlserver.jdbc.SQLServerDriver</database.driver>
+        <database.datasource.class>com.microsoft.sqlserver.jdbc.SQLServerDataSource</database.datasource.class>
+        <database.port>${env.mssql.database.port}</database.port>
+        <database.url>jdbc:sqlserver://${database.host}:${database.port};DatabaseName=${database.name}</database.url>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>mssql-xa</id>
+      <properties>
+        <database.type>mssql</database.type>
+        <glassfish.transactions.noxa>false</glassfish.transactions.noxa>
+        <jboss.datasource.filename>mssql-xa-ds.xml</jboss.datasource.filename>
+        <database.host>${env.mssql.database.host}</database.host>
+        <database.name>${env.mssql.database.name}</database.name>
+        <database.user>${env.mssql.database.user}</database.user>
+        <database.password>${env.mssql.database.password}</database.password>
+        <database.driver>com.microsoft.sqlserver.jdbc.SQLServerDriver</database.driver>
+        <database.datasource.class>com.microsoft.sqlserver.jdbc.SQLServerXADataSource</database.datasource.class>
+        <database.datasource.class.type>${database.datasource.class.type.xa}</database.datasource.class.type>
+        <database.port>${env.mssql.database.port}</database.port>
+        <database.url>jdbc:sqlserver://${database.host}:${database.port};DatabaseName=${database.name}</database.url>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>mssql12</id>
+      <properties>
+        <database.type>mssql</database.type>
+        <glassfish.transactions.noxa>true</glassfish.transactions.noxa>
+        <jboss.datasource.filename>mssql-ds.xml</jboss.datasource.filename>
+        <database.host>${env.mssql12.database.host}</database.host>
+        <database.name>${env.mssql12.database.name}</database.name>
+        <database.user>${env.mssql12.database.user}</database.user>
+        <database.password>${env.mssql12.database.password}</database.password>
+        <database.driver>com.microsoft.sqlserver.jdbc.SQLServerDriver</database.driver>
+        <database.datasource.class>com.microsoft.sqlserver.jdbc.SQLServerDataSource</database.datasource.class>
+        <database.port>${env.mssql12.database.port}</database.port>
+        <database.url>jdbc:sqlserver://${database.host}:${database.port};DatabaseName=${database.name}</database.url>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>mssql12-xa</id>
+      <properties>
+        <database.type>mssql</database.type>
+        <glassfish.transactions.noxa>false</glassfish.transactions.noxa>
+        <jboss.datasource.filename>mssql-xa-ds.xml</jboss.datasource.filename>
+        <database.host>${env.mssql12.database.host}</database.host>
+        <database.name>${env.mssql12.database.name}</database.name>
+        <database.user>${env.mssql12.database.user}</database.user>
+        <database.password>${env.mssql12.database.password}</database.password>
+        <database.driver>com.microsoft.sqlserver.jdbc.SQLServerDriver</database.driver>
+        <database.datasource.class>com.microsoft.sqlserver.jdbc.SQLServerXADataSource</database.datasource.class>
+        <database.datasource.class.type>${database.datasource.class.type.xa}</database.datasource.class.type>
+        <database.port>${env.mssql12.database.port}</database.port>
+        <database.url>jdbc:sqlserver://${database.host}:${database.port};DatabaseName=${database.name}</database.url>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>oracle</id>
+      <properties>
+        <database.type>oracle</database.type>
+        <glassfish.transactions.noxa>true</glassfish.transactions.noxa>
+        <jboss.datasource.filename>oracle-ds.xml</jboss.datasource.filename>
+        <database.host>${env.oracle.database.host}</database.host>
+        <database.name>${env.oracle.database.name}</database.name>
+        <database.user>${env.oracle.database.user}</database.user>
+        <database.password>${env.oracle.database.password}</database.password>
+        <database.driver>oracle.jdbc.OracleDriver</database.driver>
+        <database.datasource.class>oracle.jdbc.pool.OracleDataSource</database.datasource.class>
+        <database.port>${env.oracle.database.port}</database.port>
+        <database.url>jdbc:oracle:thin:@${database.host}:${database.port}:xe</database.url>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>oracle-xa</id>
+      <properties>
+        <database.type>oracle</database.type>
+        <glassfish.transactions.noxa>false</glassfish.transactions.noxa>
+        <jboss.datasource.filename>oracle-xa-ds.xml</jboss.datasource.filename>
+        <database.host>${env.oracle.database.host}</database.host>
+        <database.name>${env.oracle.database.name}</database.name>
+        <database.user>${env.oracle.database.user}</database.user>
+        <database.password>${env.oracle.database.password}</database.password>
+        <database.driver>oracle.jdbc.OracleDriver</database.driver>
+        <database.datasource.class>oracle.jdbc.xa.client.OracleXADataSource</database.datasource.class>
+        <database.datasource.class.type>${database.datasource.class.type.xa}</database.datasource.class.type>
+        <database.port>${env.oracle.database.port}</database.port>
+        <database.url>jdbc:oracle:thin:@${database.host}:${database.port}:xe</database.url>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>postgres</id>
+      <properties>
+        <database.type>postgres</database.type>
+        <glassfish.transactions.noxa>true</glassfish.transactions.noxa>
+        <jboss.datasource.filename>postgres-ds.xml</jboss.datasource.filename>
+        <database.host>${env.postgres.database.host}</database.host>
+        <database.name>${env.postgres.database.name}</database.name>
+        <database.user>${env.postgres.database.user}</database.user>
+        <database.password>${env.postgres.database.password}</database.password>
+        <database.driver>org.postgresql.Driver</database.driver>
+        <database.datasource.class>org.postgresql.ds.PGSimpleDataSource</database.datasource.class>
+        <database.port>${env.postgres.database.port}</database.port>
+        <database.url>jdbc:postgresql://${database.host}:${database.port}/${database.name}</database.url>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>postgres-xa</id>
+      <properties>
+        <database.type>postgres</database.type>
+        <glassfish.transactions.noxa>false</glassfish.transactions.noxa>
+        <jboss.datasource.filename>postgres-xa-ds.xml</jboss.datasource.filename>
+        <database.host>${env.postgres.database.host}</database.host>
+        <database.name>${env.postgres.database.name}</database.name>
+        <database.user>${env.postgres.database.user}</database.user>
+        <database.password>${env.postgres.database.password}</database.password>
+        <database.driver>org.postgresql.Driver</database.driver>
+        <database.datasource.class>org.postgresql.xa.PGXADataSource</database.datasource.class>
+        <database.datasource.class.type>${database.datasource.class.type.xa}</database.datasource.class.type>
+        <database.port>${env.postgres.database.port}</database.port>
+        <database.url>jdbc:postgresql://${database.host}:${database.port}/${database.name}</database.url>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>postgres93</id>
+      <properties>
+        <database.type>postgres</database.type>
+        <glassfish.transactions.noxa>true</glassfish.transactions.noxa>
+        <jboss.datasource.filename>postgres-ds.xml</jboss.datasource.filename>
+        <database.host>${env.postgres93.database.host}</database.host>
+        <database.name>${env.postgres93.database.name}</database.name>
+        <database.user>${env.postgres93.database.user}</database.user>
+        <database.password>${env.postgres93.database.password}</database.password>
+        <database.driver>org.postgresql.Driver</database.driver>
+        <database.datasource.class>org.postgresql.ds.PGSimpleDataSource</database.datasource.class>
+        <database.port>${env.postgres93.database.port}</database.port>
+        <database.url>jdbc:postgresql://${database.host}:${database.port}/${database.name}</database.url>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>postgres93-xa</id>
+      <properties>
+        <database.type>postgres</database.type>
+        <glassfish.transactions.noxa>false</glassfish.transactions.noxa>
+        <jboss.datasource.filename>postgres-xa-ds.xml</jboss.datasource.filename>
+        <database.host>${env.postgres93.database.host}</database.host>
+        <database.name>${env.postgres93.database.name}</database.name>
+        <database.user>${env.postgres93.database.user}</database.user>
+        <database.password>${env.postgres93.database.password}</database.password>
+        <database.driver>org.postgresql.Driver</database.driver>
+        <database.datasource.class>org.postgresql.xa.PGXADataSource</database.datasource.class>
+        <database.datasource.class.type>${database.datasource.class.type.xa}</database.datasource.class.type>
+        <database.port>${env.postgres93.database.port}</database.port>
+        <database.url>jdbc:postgresql://${database.host}:${database.port}/${database.name}</database.url>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>mysql</id>
+      <properties>
+        <database.type>mysql</database.type>
+        <glassfish.transactions.noxa>true</glassfish.transactions.noxa>
+        <jboss.datasource.filename>mysql-ds.xml</jboss.datasource.filename>
+        <database.host>${env.mysql.database.host}</database.host>
+        <database.name>${env.mysql.database.name}</database.name>
+        <database.user>${env.mysql.database.user}</database.user>
+        <database.password>${env.mysql.database.password}</database.password>
+        <database.driver>com.mysql.jdbc.Driver</database.driver>
+        <database.datasource.class>com.mysql.jdbc.jdbc2.optional.MysqlDataSource</database.datasource.class>
+        <database.port>${env.mysql.database.port}</database.port>
+        <database.url>jdbc:mysql://${database.host}:${database.port}/${database.name}</database.url>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>mysql-xa</id>
+      <properties>
+        <database.type>mysql</database.type>
+        <glassfish.transactions.noxa>false</glassfish.transactions.noxa>
+        <jboss.datasource.filename>mysql-xa-ds.xml</jboss.datasource.filename>
+        <database.host>${env.mysql.database.host}</database.host>
+        <database.name>${env.mysql.database.name}</database.name>
+        <database.user>${env.mysql.database.user}</database.user>
+        <database.password>${env.mysql.database.password}</database.password>
+        <database.driver>com.mysql.jdbc.Driver</database.driver>
+        <database.datasource.class>com.mysql.jdbc.jdbc2.optional.MysqlXADataSource</database.datasource.class>
+        <database.datasource.class.type>${database.datasource.class.type.xa}</database.datasource.class.type>
+        <database.port>${env.mysql.database.port}</database.port>
+        <database.url>jdbc:mysql://${database.host}:${database.port}/${database.name}</database.url>
+      </properties>
     </profile>
 
   </profiles>
